--- a/game_aide/pubspec.yaml
+++ b/game_aide/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   http: ^1.2.0
   flutter_dotenv: ^5.1.0
+  url_launcher: ^6.3.0
 
 dev_dependencies:
   flutter_test:
