--- a/game_aide/pubspec.yaml
+++ b/game_aide/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   http: ^1.2.0
   flutter_dotenv: ^5.1.0
   url_launcher: ^6.3.0
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
